@@ -1,3 +1,7 @@
+2009-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff 3.9.1 released.
+
 2009-08-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirwrite.c: Back out changes from 2007-11-22 that
